채용공고 수정

--- a/portal/html/USR-1241-F-DTL.html
+++ b/portal/html/USR-1241-F-DTL.html
@@ -351,7 +351,9 @@
                             </tr>
                             <tr>
                                 <th scope="row"><label for="input_03">기업/기관명</label></th>
-                                <td colspan="3">JB인베스트먼트</td>
+                                <td>JB인베스트먼트</td>
+                                <th scope="row"><label for="input_03">등록일자</label></th>
+                                <td>2022-09-28</td>
                             </tr>
                             <tr>
                                 <th scope="row"><label for="input_04">채용 마감일</label></th>
@@ -360,10 +362,12 @@
                                 <td>0명</td>
                             </tr>
                             <tr class="bg">
-                                <td colspan="4">상세내용</td>
+                                <th scope="row"><label for="input_04">공고 내용</label></th>
+                                <td colspan="3">상세내용</td>
                             </tr>
                             <tr>
-                                <td colspan="4">
+                                <th scope="row"><label for="input_04">첨부파일</label></th>
+                                <td colspan="3">
                                     <div class="file_download">
                                         <div class="btn_box bg">
                                             <a href="" class="download" download="">전체 다운로드</a>
