--- a/portal/html/USR-1241-F-FORM.html
+++ b/portal/html/USR-1241-F-FORM.html
@@ -421,29 +421,17 @@
                                 </td>
                                 <th scope="row"><label for="radio_001">채용인원</label></th>
                                 <td>
-                                    <div class="inp_group rdo_inp">
-                                        <div class="rdo_box">
-                                            <span>
-                                                <input type="radio" id="radio_001" name="rdo_group_02">
-                                                <label for="radio_001">0명</label>
-                                            </span>
-                                            <span>
-                                                <input type="radio" id="radio_002" name="rdo_group_02">
-                                                <label for="radio_002">00명</label>
-                                            </span>
-                                            <span>
-                                                <input type="radio" id="radio_003" name="rdo_group_02">
-                                                <label for="radio_003">기타</label>
-                                            </span>
-                                        </div>
+                                    <div class="inp_group inp_txt">
                                         <div class="inp_box">
                                             <input type="text" id="input_01">
                                         </div>
+                                        <span class="txt">명</span>
                                     </div>
                                 </td>
                             </tr>
-                            <tr class="bg">
-                                <td colspan="4">
+                            <tr>
+                                <th scope="row"><label for="radio_001">공고내용</label></th>
+                                <td colspan="3">
                                     <div class="inp_group">
                                         <div class="textarea_box cont">
                                             <textarea id="textarea_01"></textarea>
@@ -452,13 +440,15 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td colspan="4">
+                                <th scope="row"><label for="radio_001">첨부파일</label></th>
+                                <td colspan="3">
                                     <div class="inp_group file">
                                         <div class="file_box">
                                             <input type="file" id="file_inp" class="file_inp">
                                             <label for="file_inp">파일첨부</label>
                                             <span class="file_value"></span>
                                         </div>
+                                        <span class="txt">[100MB 이내 가능]</span>
                                     </div>
                                 </td>
                             </tr>
