--- a/portal/html/USR-1056-F-LIST.html
+++ b/portal/html/USR-1056-F-LIST.html
@@ -43,7 +43,7 @@
                                 <a href="./USR-1051-H-CONTN.html">벤처투자마트</a>
                                 <ul>
                                     <li><a href="./USR-1051-H-CONTN.html">벤처투자마트란?</a></li>
-                                    <li><a href="./USR-1054-F-FORM.html">벤처투자마트 신청</a></li>
+                                    <li><a href="./USR-1056-F-DTL.html">벤처투자마트 신청</a></li>
                                     <li><a href="./USR-1056-F-LIST.html">신청 정보 확인</a></li>
                                     <li><a href="./USR-1052-B-LIST.html">벤처투자마트 공지</a></li>
                                     <li><a href="./USR-1053-B-LIST.html">FAQ</a></li>
@@ -178,7 +178,7 @@
                             <a href="javascript:void(0);">벤처투자마트</a>
                             <ul>
                                 <li><a href="./USR-1051-H-CONTN.html">벤처투자마트란?</a></li>
-                                <li><a href="./USR-1054-F-FORM.html">벤처투자마트 신청</a></li>
+                                <li><a href="./USR-1056-F-DTL.html">벤처투자마트 신청</a></li>
                                 <li><a href="./USR-1056-F-LIST.html">신청 정보 확인</a></li>
                                 <li><a href="./USR-1052-B-LIST.html">벤처투자마트 공지</a></li>
                                 <li><a href="./USR-1053-B-LIST.html">FAQ</a></li>
@@ -336,7 +336,7 @@
                 <div class="tbl_longcard">
                     <ul>
                         <li>
-                            <a href="./USR-1030-B-DTL.html">
+                            <a href="./USR-1056-F-DTL.html">
                                 <div class="tit">
                                     <span>VC TRACK</span>
                                     <strong>벤처투자마트 신청서</strong>
@@ -348,7 +348,90 @@
                                     <li>신청일 2022-08-26</li>
                                 </ul>
                             </div>
-                            
+                        </li>
+                        <li>
+                            <a href="./USR-1056-F-DTL.html">
+                                <div class="tit">
+                                    <span>VC TRACK</span>
+                                    <strong>벤처투자마트 신청서</strong>
+                                </div>
+                            </a>
+                            <div class="info">
+                                <div class="state">승인</div>
+                                <ul>
+                                    <li>신청일 2022-08-26</li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="./USR-1056-F-DTL.html">
+                                <div class="tit">
+                                    <span>VC TRACK</span>
+                                    <strong>벤처투자마트 신청서</strong>
+                                </div>
+                            </a>
+                            <div class="info">
+                                <div class="state">거절</div>
+                                <ul>
+                                    <li>신청일 2022-08-26</li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="./USR-1056-F-DTL.html">
+                                <div class="tit">
+                                    <span>VC TRACK</span>
+                                    <strong>벤처투자마트 신청서</strong>
+                                </div>
+                            </a>
+                            <div class="info">
+                                <div class="state">2차 신청서 작성</div>
+                                <ul>
+                                    <li>신청일 2022-08-26</li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="./USR-1056-F-DTL.html">
+                                <div class="tit">
+                                    <span>VC TRACK</span>
+                                    <strong>벤처투자마트 신청서</strong>
+                                </div>
+                            </a>
+                            <div class="info">
+                                <div class="state">신청</div>
+                                <ul>
+                                    <li>신청일 2022-08-26</li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="./USR-1056-F-DTL.html">
+                                <div class="tit">
+                                    <span>VC TRACK</span>
+                                    <strong>벤처투자마트 신청서</strong>
+                                </div>
+                            </a>
+                            <div class="info">
+                                <div class="state">신청</div>
+                                <ul>
+                                    <li>신청일 2022-08-26</li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="./USR-1056-F-DTL.html">
+                                <div class="tit">
+                                    <span>VC TRACK</span>
+                                    <strong>벤처투자마트 신청서</strong>
+                                </div>
+                            </a>
+                            <div class="info">
+                                <div class="state">신청</div>
+                                <ul>
+                                    <li>신청일 2022-08-26</li>
+                                </ul>
+                            </div>
                         </li>
                     </ul>
                 </div>
@@ -370,7 +453,8 @@
                     </div>
     
                     <div class="btn_box">
-                        <a href="./USR-1030-B-FORM.html" class="btn_blue">글쓰기</a>
+                        <a href="./USR-1030-B-FORM.html" class="btn_blue">2차 신청서 작성</a>
+                        <a href="./USR-1030-B-FORM.html" class="btn_blue">벤처투자마트 신청</a>
                     </div>
                 </div>
 
