--- a/pub_list.html
+++ b/pub_list.html
@@ -995,7 +995,7 @@
                     path:'./portal/html/.html',
                     date:'',
                     mdate:'',
-                    con:'작업중',
+                    con:'완료',
                     etc:'-> 바로가기 USR-1056-F-LIST'
                 },
                 {
