--- a/pub_list.html
+++ b/pub_list.html
@@ -512,9 +512,9 @@
                     division: '',
                     depth1:'정보광장 - 프로그램',
                     path:'./portal/html/USR-1236-H-CONTN.html',
-                    date:'',
+                    date:'2022-09-29',
                     mdate:'2022-10-20',
-                    con:'작업중',
+                    con:'완료',
                     etc:'[2차디자인]'
                 },
                 {
