--- a/portal/html/USR-1054-F-FORM.html
+++ b/portal/html/USR-1054-F-FORM.html
@@ -129,7 +129,8 @@
             </nav>
             <div class="util_box">
                 <div class="search_box">
-                    <input type="text">
+                    <input type="text" id="search_inp">
+                    <label for="search_inp" class="hidden">검색어 입력</label>
                     <button>검색</button>
                 </div>
                 <a href="./USR-2210-F-LIST.html" class="btn_sitemap" title="사이트맵">
@@ -436,9 +437,11 @@
                                                 </select>
                                             </div>
                                             <div class="inp_box">
+                                                <label for="input_08" class="hidden">전화번호 중간자리</label>
                                                 <input type="text" id="input_08">
                                             </div>
                                             <div class="inp_box">
+                                                <label for="input_09" class="hidden">전화번호 중간자리</label>
                                                 <input type="text" id="input_09">
                                             </div>
                                         </div>
@@ -454,10 +457,12 @@
                                                 </div>
                                                 <span>@</span>
                                                 <div class="inp_box">
+                                                    <label for="input_11" class="hidden">이메일 뒷주소 입력</label>
                                                     <input type="text" id="input_11">
                                                 </div>
                                             </div>
                                             <div class="sel_box">
+                                                <label for="sel_03" class="hidden">선택</label>
                                                 <select id="sel_03">
                                                     <option value="">직접입력</option>
                                                     <option value="">naver.com</option>
@@ -967,6 +972,7 @@
                                                                         <td>
                                                                             <div class="inp_group">
                                                                                 <div class="inp_box">
+                                                                                    <label for="input_0002" class="hidden">입력</label>
                                                                                     <input type="text" id="input_0002">
                                                                                 </div>
                                                                             </div>
@@ -974,6 +980,7 @@
                                                                         <td>
                                                                             <div class="inp_group">
                                                                                 <div class="inp_box">
+                                                                                    <label for="input_0003" class="hidden">입력</label>
                                                                                     <input type="text" id="input_0003">
                                                                                 </div>
                                                                             </div>
@@ -981,6 +988,7 @@
                                                                         <td>
                                                                             <div class="inp_group">
                                                                                 <div class="inp_box">
+                                                                                    <label for="input_0004" class="hidden">입력</label>
                                                                                     <input type="text" id="input_0004">
                                                                                 </div>
                                                                             </div>
@@ -988,6 +996,7 @@
                                                                         <td>
                                                                             <div class="inp_group">
                                                                                 <div class="inp_box">
+                                                                                    <label for="input_0005" class="hidden">입력</label>
                                                                                     <input type="text" id="input_0005">
                                                                                 </div>
                                                                             </div>
@@ -1006,6 +1015,7 @@
                                                                         <td>
                                                                             <div class="inp_group">
                                                                                 <div class="inp_box">
+                                                                                    <label for="input_0006" class="hidden">입력</label>
                                                                                     <input type="text" id="input_0006">
                                                                                 </div>
                                                                             </div>
@@ -1013,6 +1023,7 @@
                                                                         <td>
                                                                             <div class="inp_group">
                                                                                 <div class="inp_box">
+                                                                                    <label for="input_0007" class="hidden">입력</label>
                                                                                     <input type="text" id="input_0007">
                                                                                 </div>
                                                                             </div>
@@ -1020,6 +1031,7 @@
                                                                         <td>
                                                                             <div class="inp_group">
                                                                                 <div class="inp_box">
+                                                                                    <label for="input_0008" class="hidden">입력</label>
                                                                                     <input type="text" id="input_0008">
                                                                                 </div>
                                                                             </div>
@@ -1027,6 +1039,7 @@
                                                                         <td>
                                                                             <div class="inp_group">
                                                                                 <div class="inp_box">
+                                                                                    <label for="input_0009" class="hidden">입력</label>
                                                                                     <input type="text" id="input_0009">
                                                                                 </div>
                                                                             </div>
@@ -1225,7 +1238,8 @@
             </ul>
             <div class="familysite_box">
                 <div class="family_select">
-                    <select>
+                    <label for="sel_family" class="hidden">관련사이트 선택</label>
+                    <select id="sel_family">
                         <option value="">관련사이트</option>
                         <option value="">관련사이트좀더긴텍스트</option>
                         <option value="">관련사이트</option>
