--- a/portal/html/USR-1341-F-LIST.html
+++ b/portal/html/USR-1341-F-LIST.html
@@ -129,7 +129,8 @@
             </nav>
             <div class="util_box">
                 <div class="search_box">
-                    <input type="text">
+                    <input type="text" id="search_inp">
+                    <label for="search_inp" class="hidden">검색어 입력</label>
                     <button>검색</button>
                 </div>
                 <a href="./USR-2210-F-LIST.html" class="btn_sitemap" title="사이트맵">
@@ -1016,7 +1017,8 @@
                                         
                                         <div class="board_infobox">
                                             <div class="sel_box">
-                                                <select>
+                                                <label for="sel_02" class="hidden">투자사명 선택</label>
+                                                <select id="sel_02">
                                                     <option value="">받은신청</option>
                                                     <option value="">보낸신청</option>
                                                 </select>
@@ -1693,7 +1695,8 @@
             </ul>
             <div class="familysite_box">
                 <div class="family_select">
-                    <select>
+                    <label for="sel_family" class="hidden">관련사이트 선택</label>
+                    <select id="sel_family">
                         <option value="">관련사이트</option>
                         <option value="">관련사이트좀더긴텍스트</option>
                         <option value="">관련사이트</option>
