--- a/portal/html/main.html
+++ b/portal/html/main.html
@@ -136,7 +136,8 @@
             </nav>
             <div class="util_box">
                 <div class="search_box">
-                    <input type="text">
+                    <input type="text" id="search_inp">
+                    <label for="search_inp" class="hidden">검색어 입력</label>
                     <button>검색</button>
                 </div>
                 <a href="./USR-2210-F-LIST.html" class="btn_sitemap" title="사이트맵">
@@ -534,6 +535,7 @@
                     <div class="search_box">
                         <div class="inp_group search">
                             <div class="inp_box">
+                                <label for="input_01" class="hidden">검색어 입력</label>
                                 <input type="text" id="input_01" placeholder="검색어를 입력하세요.">
                             </div>
                             <div class="box_btn">
