--- a/portal/html/pub_guide.html
+++ b/portal/html/pub_guide.html
@@ -317,6 +317,12 @@
                     <div class="btn_box bg">
                         <a href="./USR-1030-B-LIST.html" class="btn_cancel">취소</a>
                     </div>
+                    <div class="btn_box bg">
+                        <a href="" class="btn_send">보내기</a>
+                    </div>
+                    <div class="btn_box bg">
+                        <a href="" class="btn_reply">답장</a>
+                    </div>
                 </div>
             </dd>
         </dl>
