--- a/portal/html/USR-1162-B-LIST.html
+++ b/portal/html/USR-1162-B-LIST.html
@@ -129,7 +129,8 @@
             </nav>
             <div class="util_box">
                 <div class="search_box">
-                    <input type="text">
+                    <input type="text" id="search_inp">
+                    <label for="search_inp" class="hidden">검색어 입력</label>
                     <button>검색</button>
                 </div>
                 <a href="./USR-2210-F-LIST.html" class="btn_sitemap" title="사이트맵">
@@ -325,7 +326,8 @@
                 <div class="board_infobox">
                     <div class="total">전체 <span>150</span>건</div>
                     <div class="search_box">
-                        <input type="text" placeholder="검색어를 입력해주세요.">
+                        <label for="search_box_01" class="hidden">검색어 입력</label>
+                        <input type="text" id="search_box_01" placeholder="검색어를 입력해주세요.">
                         <button>검색</button>
                     </div>
                 </div>
@@ -553,7 +555,8 @@
             </ul>
             <div class="familysite_box">
                 <div class="family_select">
-                    <select>
+                    <label for="sel_family" class="hidden">관련사이트 선택</label>
+                    <select id="sel_family">
                         <option value="">관련사이트</option>
                         <option value="">관련사이트좀더긴텍스트</option>
                         <option value="">관련사이트</option>
