--- a/portal/html/layout3.html
+++ b/portal/html/layout3.html
@@ -129,7 +129,8 @@
             </nav>
             <div class="util_box">
                 <div class="search_box">
-                    <input type="text">
+                    <input type="text" id="search_inp">
+                    <label for="search_inp" class="hidden">검색어 입력</label>
                     <button>검색</button>
                 </div>
                 <a href="./USR-2210-F-LIST.html" class="btn_sitemap" title="사이트맵">
@@ -340,7 +341,8 @@
                                     <dl>
                                         <dt>
                                             <div class="sel_box">
-                                                <select>
+                                                <label for="sel_02" class="hidden">투자사명 선택</label>
+                                                <select id="sel_02">
                                                     <option value="">구분</option>
                                                     <option value="">구분</option>
                                                 </select>
@@ -417,7 +419,8 @@
             </ul>
             <div class="familysite_box">
                 <div class="family_select">
-                    <select>
+                    <label for="sel_family" class="hidden">관련사이트 선택</label>
+                    <select id="sel_family">
                         <option value="">관련사이트</option>
                         <option value="">관련사이트좀더긴텍스트</option>
                         <option value="">관련사이트</option>
